--- a/lab3style.css
+++ b/lab3style.css
@@ -84,15 +84,41 @@ h5[attribute="thirdpullrequest"] {
     text-align: center;
 }
 
+.attendancelist {
+    position: center;
+}
+
 .teamlist {
     text-decoration: underline;
     color:rgb(81, 83, 83);
-    
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 100px;
+    grid-gap: 10px;
 }
 
-#agenda {
+.teamlist li {
+    display: block;
+    text-align: center;
+  }
+
+.teamlist li::after {
+    content: "";
+    display: block;
+    background-image: url('images/insert-profile-picture-here.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: 10px auto; 
+    width: 50px;
+    height: 50px;
+  }
+
+#agendalist {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
 }
 
 .surveyform label {
@@ -105,4 +131,11 @@ h5[attribute="thirdpullrequest"] {
 
 .my-button:active{
     background-color: greenyellow;
+}
+
+@media (max-width: 600px) {
+    body {
+      background-color: black;
+      color: white;
+    }
 }
