--- a/lab3style.css
+++ b/lab3style.css
@@ -97,6 +97,11 @@ h5[attribute="thirdpullrequest"] {
     grid-gap: 10px;
 }
 
+/* General Sibling */
+.teamlist li ~ li {
+    color:blue;
+}
+
 .teamlist li {
     display: block;
     text-align: center;
@@ -112,6 +117,15 @@ h5[attribute="thirdpullrequest"] {
     width: 50px;
     height: 50px;
   }
+
+#agendalist > li {
+    color:green;
+}
+
+#images h3 + h4 {
+    padding-top: 35px;
+    color: red;
+}
 
 #agendalist {
     display: flex;
@@ -138,4 +152,8 @@ h5[attribute="thirdpullrequest"] {
       background-color: black;
       color: white;
     }
+}
+
+section.imageclass {
+    background-color: antiquewhite;
 }
